# competitive-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
agents/: analysis.py  entity_resolution.py  extraction.py  orchestrator.py  query.py  subagents.py
agents/scraper/: arxiv.py  base.py  careers.py  github.py  googlenews.py  greenhouse.py  hn.py  lever.py  news.py
api/: dependencies.py  main.py
api/routers/: alerts.py  query.py  reports.py  runs.py  signals.py  targets.py
core/: config.py  dedup.py  embeddings.py  llm.py  ratelimit.py
db/: models.py  queries.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py  0002_embedding_dim_1024.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MetricsBar.tsx  QueryBox.tsx  SignalFeed.tsx  TargetCard.tsx
frontend/src/lib/: api.ts
scripts/: migrate.py  seed_demo.py
tasks/: alert.py  analyze.py  celery_app.py  crawl.py  extract.py
tests/: test_api.py  test_dedup.py  test_entity_resolution.py  test_extraction.py
