[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "agents*", "core*", "db*", "tasks*"]

[project]
name = "competitive-intelligence-engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # DB
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "pgvector>=0.2.5",
    "psycopg2-binary>=2.9.9",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    # HTTP
    "httpx>=0.27.0",
    # HTML stripping
    "trafilatura>=1.9.0",
    # LLM
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "voyageai>=0.3.0",
    # Fuzzy matching
    "rapidfuzz>=3.9.3",
    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
